# cugen

./: .gitignore  LICENSE  README.md  pyproject.toml
cugen/: __init__.py  __main__.py  _binary_spa.py  _step5b_finemapping.py  _stubs.py  aliases.py  assoc.py  cli.py  config.py  finemapping.py  freq.py  io.py  lasso.py  ld.py  loci.py  popstruct.py  prep_cohort.py  prs.py  qc.py  repair.py  score.py  screen.py  subset.py  workflow.py
cugen/plot/: __init__.py  manhattan.py  qq.py
cugen/ultralasso/: __init__.py
