[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cugen"
version = "0.1.7"
description = "GPU-accelerated UltraLasso / UltraSuSiE genomics pipeline with a PLINK/Hail-style Python API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tuomo Kiiskinen", email = "tuomo.kiiskinen@finngen.fi" },
]
keywords = [
    "genomics", "GWAS", "LASSO", "fine-mapping", "UKBB",
    "polygenic-score", "GPU", "CUDA",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyarrow>=13",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0"]
plot = ["matplotlib>=3.7"]

[project.scripts]
cugen = "cugen.cli:main"

[project.urls]
Repository = "https://github.com/yuj1r0/cugen"
Issues = "https://github.com/yuj1r0/cugen/issues"

[tool.setuptools.packages.find]
include = ["cugen*"]
